# n-mudkipmugs-eshop

./: .env  pyproject.toml  requirements.txt
backend/: db.sqlite3
backend/backend/: settings.py  settings.py.bak  urls.py
backend/cart/: cart.py  urls.py  views.py
backend/cart/templates/cart/: cart.html  checkout_mp.html  checkout_paypal - two.html  checkout_paypal.html  checkout_stripe.html  choose_payment.html  success.html
backend/core/: admin.py  forms.py  models.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py  0002_alter_contact_message.py  0003_contact_subject.py  0004_alter_contact_subject.py  0005_remove_contact_subject.py  0006_contact_subject.py  0007_alter_contact_subject.py  0008_alter_contact_subject.py
backend/core/static/: style.css
backend/core/templates/core/: admin_dashboard.html  (+8 more)
backend/order/: admin.py  models.py  urls.py  views.py
backend/order/migrations/: 0001_initial.py  0002_alter_order_status.py  0003_alter_order_options_alter_order_status.py  0004_alter_order_options.py
backend/product/: models.py  views.py
backend/product/migrations/: 0001_initial.py  0002_product_image_product_thumbnail.py  0003_alter_category_options.py  0004_product_ordered_times.py  0005_alter_product_ordered_times.py  0006_remove_product_ordered_times.py  0007_product_earnings.py  0008_alter_product_earnings.py  0009_alter_product_earnings.py  0010_remove_product_earnings.py  0011_remove_product_thumbnail.py  0012_product_thumbnail.py  0013_remove_product_thumbnail.py
backend/staticfiles/: staticfiles.json  style.d1fee5c5cfc7.css
(+6 files in other folders)
