[tool.poetry]
name = "n-mudkipmugs-eshop"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
tzdata = "^2022.7"
stripe = "^5.0.0"
Django = "^4.1.5"
mercadopago = "^2.2.0"
Pillow = "^9.4.0"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
